[package]
name = "journald-binary"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
forensicnomicon = { workspace = true }
journald-core = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true
