[package]
name = "journald-binary"
description = "Binary-format parser for systemd journal (.journal) files"version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
forensicnomicon = { workspace = true }
journald-core = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true
