[package]
name = "journald-core"
description = "Core domain types for systemd journal (journald) forensic analysis"version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true
