[package]
name = "journald-integrity"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
journald-core = { workspace = true }
journald-binary = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true
