[package]
name = "journald-integrity"
description = "Tampering, sealing, and corruption detection for systemd journal files"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
journald-core = { workspace = true }
journald-binary = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true
